// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Accessibility Visual Tests renders focus states correctly: focus-states-accessibility 1`] = `
<div
  class="responsive-container desktop"
  style="width: 1024px; height: 768px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Accessibility Visual Tests renders high contrast mode correctly: high-contrast-mode 1`] = `
<div
  class="responsive-container desktop"
  style="width: 1024px; height: 768px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Breakpoint Transition Visual Tests renders component at mobile-to-tablet breakpoint: mobile-tablet-breakpoint 1`] = `
<div
  class="responsive-container tablet"
  style="width: 768px; height: 1024px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Breakpoint Transition Visual Tests renders component at tablet-to-desktop breakpoint: tablet-desktop-breakpoint 1`] = `
<div
  class="responsive-container desktop"
  style="width: 1024px; height: 768px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Desktop Responsive Visual Tests renders complex form desktop correctly: complex-form-desktop 1`] = `
<div
  class="responsive-container desktop"
  style="width: 1024px; height: 768px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Desktop Responsive Visual Tests renders data visualization desktop correctly: data-visualization-desktop 1`] = `
<div
  class="responsive-container desktop"
  style="width: 1024px; height: 768px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Desktop Responsive Visual Tests renders full dashboard desktop correctly: full-dashboard-desktop 1`] = `
<div
  class="responsive-container desktop"
  style="width: 1024px; height: 768px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Desktop Responsive Visual Tests renders multi-column layout desktop correctly: multi-column-desktop 1`] = `
<div
  class="responsive-container desktop"
  style="width: 1024px; height: 768px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Mobile Responsive Visual Tests renders button layout mobile correctly: button-layout-mobile 1`] = `
<div
  class="responsive-container mobile"
  style="width: 375px; height: 667px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Mobile Responsive Visual Tests renders card grid mobile correctly: card-grid-mobile 1`] = `
<div
  class="responsive-container mobile"
  style="width: 375px; height: 667px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Mobile Responsive Visual Tests renders form layout mobile correctly: form-layout-mobile 1`] = `
<div
  class="responsive-container mobile"
  style="width: 375px; height: 667px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Mobile Responsive Visual Tests renders navigation mobile correctly: navigation-mobile 1`] = `
<div
  class="responsive-container mobile"
  style="width: 375px; height: 667px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Tablet Responsive Visual Tests renders dashboard layout tablet correctly: dashboard-layout-tablet 1`] = `
<div
  class="responsive-container tablet"
  style="width: 768px; height: 1024px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Tablet Responsive Visual Tests renders data table tablet correctly: data-table-tablet 1`] = `
<div
  class="responsive-container tablet"
  style="width: 768px; height: 1024px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Tablet Responsive Visual Tests renders sidebar layout tablet correctly: sidebar-layout-tablet 1`] = `
<div
  class="responsive-container tablet"
  style="width: 768px; height: 1024px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Tablet Responsive Visual Tests renders tabs layout tablet correctly: tabs-layout-tablet 1`] = `
<div
  class="responsive-container tablet"
  style="width: 768px; height: 1024px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Ultra-Wide Responsive Visual Tests renders data center layout ultrawide correctly: data-center-layout-ultrawide 1`] = `
<div
  class="responsive-container ultrawide"
  style="width: 1920px; height: 1080px;"
>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Ultra-Wide Responsive Visual Tests renders enterprise dashboard ultrawide correctly: enterprise-dashboard-ultrawide 1`] = `
<div
  class="responsive-container ultrawide"
  style="width: 1920px; height: 1080px;"
>
  <div>
    Loading...
  </div>
</div>
`;
